edit for mobile responsiveness

--- a/contact.html
+++ b/contact.html
@@ -84,10 +84,19 @@
                         
                             <div class="form-group row">
                             <label for="Message">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" cols="100%"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" cols="100vm"></textarea>
                             </div>
                 </form>
             </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <br>
+            <br>
+            <br>
+            <br>
         </div>
     </div>
 
