--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="row">
             <div class="col-sm">
